--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
-    <title>Document</title>
+    <title>Todo List</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
@@ -17,8 +17,8 @@
 <body>
     <div class="todo">
         <div class="header">
-            <h1>ToDo List</h1>
-            <input type="text" class="todo-input" placeholder="type a task">
+            <h1>Todo List</h1>
+            <input type="text" class="todo-input" placeholder="Type a task">
             <button class="btn-add">Add</button>
         </div>
         <div class="todolist">
